[package]
name = "lambda-traffic-experiment"
version = "0.1.0"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2018"

[dependencies]
bincode = "1.0"
byteorder = "1.3"
lambda_runtime = "0.1"
log = "0.4"
nix = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple_logger = "1.0"
stun = "0.0"
rusoto_core = {version = "0.36.0", default_features = false, features=["rustls"]}
rusoto_s3 = {version = "0.36.0", default_features = false, features=["rustls"]}
rusoto_lambda = {version = "0.36.0", default_features = false, features=["rustls"]}

[[bin]]
name = "receiver"
path = "src/receiver.rs"

[[bin]]
name = "sender"
path = "src/sender.rs"

[[bin]]
name = "local"
path = "src/local.rs"
