[package]
name = "lambda-traffic-experiment"
version = "0.1.0"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2018"

[dependencies]
bincode = "1.0"
byteorder = "1.3"
ctrlc = "3.1"
docopt = "1"
indicatif = "0.11"
lambda_runtime = "0.1"
log = "0.4"
futures = "0.1"
nix = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple_logger = "1.0"
stun = "0.0"
rand = "0.6"
rusoto_core = {version = "0.36.0", default_features = false, features=["rustls"]}
rusoto_s3 = {version = "0.36.0", default_features = false, features=["rustls"]}
rusoto_lambda = {version = "0.36.0", default_features = false, features=["rustls"]}

[[bin]]
name = "remote"
path = "src/remote.rs"

[[bin]]
name = "local"
path = "src/local.rs"
